[project]
name = "imagemcp-latest"
version = "0.1.0"
description = "AI Image Generator GUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.6.0",
    "openai>=1.93.0",
    "pillow>=11.2.1",
    "py2app>=0.28.8",
    "pyinstaller>=6.14.1",
    "pyqt5>=5.15.11",
    "requests>=2.32.4",
]
